# global_system_resources

./: BUILD.gn  OAT.xml  README.md  bundle.json  systemres.gni
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
fonts/: hm_symbol_config.json  hm_symbol_config_next.json  hm_symbol_config_next_watch.json  hm_symbol_config_watch.json
systemres/: BUILD.gn  SystemResources.p7b
systemres/AppScope/: app.json
systemres/AppScope/resources/base/element/: string.json
systemres/AppScope/resources/zh_CN/element/: string.json
systemres/main/: config.json  module.json
systemres/main/resources/2in1-dark/element/: color.json  color_sys.json
systemres/main/resources/2in1/element/: color.json  color_sys.json  float.json  float_sys.json  pattern.json  string.json
systemres/main/resources/ar-wearable/element/: string.json
systemres/main/resources/ar/element/: plurals.json  string.json  symbol.json
systemres/main/resources/base/element/: color.json  color_dark.json  color_sys.json  float.json  float_sys.json  id_defined.json  pattern.json  plurals.json  string.json  string_sys.json  symbol.json  theme.json
systemres/main/resources/be-wearable/element/: string.json
systemres/main/resources/be/element/: string.json
systemres/main/resources/bg/element/: string.json
systemres/main/resources/bn/element/: string.json
systemres/main/resources/bo_CN/element/: plurals.json  string.json
systemres/main/resources/car/element/: color.json  color_sys.json  float.json
systemres/main/resources/cs/element/: string.json
systemres/main/resources/da/element/: string.json
systemres/main/resources/dark/element/: color.json  color_sys.json  float.json
systemres/main/resources/de/element/: plurals.json  string.json
systemres/main/resources/el/element/: string.json
systemres/main/resources/en_GB/element/: plurals.json  string.json
systemres/main/resources/es/element/: plurals.json  string.json
systemres/main/resources/es_US/element/: string.json
systemres/main/resources/et-wearable/element/: string.json
systemres/main/resources/et/element/: string.json
systemres/main/resources/fa/element/: string.json  symbol.json
systemres/main/resources/fi/element/: string.json
systemres/main/resources/fil/element/: string.json
systemres/main/resources/fr/element/: plurals.json  string.json
systemres/main/resources/he/element/: string.json  symbol.json
systemres/main/resources/hi/element/: string.json
systemres/main/resources/hr/element/: string.json
systemres/main/resources/hu/element/: string.json
systemres/main/resources/id/element/: plurals.json  string.json
systemres/main/resources/in/element/: string.json
systemres/main/resources/it/element/: plurals.json  string.json
systemres/main/resources/iw/element/: string.json
systemres/main/resources/ja/element/: plurals.json  string.json
systemres/main/resources/ka/element/: string.json
systemres/main/resources/ka_GE/element/: string.json
systemres/main/resources/kk-wearable/element/: string.json
systemres/main/resources/kk/element/: string.json
systemres/main/resources/km-wearable/element/: string.json
systemres/main/resources/km/element/: string.json
systemres/main/resources/ko/element/: plurals.json  string.json
systemres/main/resources/lo/element/: plurals.json  string.json
systemres/main/resources/lt/element/: string.json
systemres/main/resources/lv-wearable/element/: string.json
systemres/main/resources/lv/element/: string.json
systemres/main/resources/mk-wearable/element/: string.json
systemres/main/resources/mk/element/: string.json
systemres/main/resources/ms/element/: plurals.json  string.json
systemres/main/resources/my/element/: plurals.json  string.json
systemres/main/resources/my_MM/element/: string.json
systemres/main/resources/nb/element/: string.json
systemres/main/resources/nl/element/: string.json
systemres/main/resources/phone/element/: string.json
systemres/main/resources/pl/element/: plurals.json  string.json
systemres/main/resources/pt/element/: string.json
systemres/main/resources/pt_PT/element/: plurals.json  string.json
systemres/main/resources/ro/element/: string.json
systemres/main/resources/ru/element/: plurals.json  string.json
systemres/main/resources/sk/element/: string.json
systemres/main/resources/sl/element/: string.json
systemres/main/resources/sr_Latn/element/: string.json
systemres/main/resources/sv/element/: string.json
systemres/main/resources/tablet/element/: float.json  string.json
systemres/main/resources/th-wearable/element/: string.json
systemres/main/resources/th/element/: plurals.json  string.json
systemres/main/resources/tl/element/: string.json
systemres/main/resources/tr-wearable/element/: string.json
systemres/main/resources/tr/element/: plurals.json  string.json
systemres/main/resources/tv-dark/element/: color.json  color_sys.json
systemres/main/resources/tv/element/: color.json  color_sys.json  float.json  float_sys.json  pattern.json  string.json  string_sys.json
systemres/main/resources/ug/element/: plurals.json  string.json  symbol.json
systemres/main/resources/uk/element/: string.json
systemres/main/resources/uz-wearable/element/: string.json
systemres/main/resources/uz/element/: string.json
systemres/main/resources/vi/element/: plurals.json  string.json
systemres/main/resources/wearable/element/: color.json  color_sys.json  float.json  string_sys.json
systemres/main/resources/zh_CN/element/: plurals.json  string.json
systemres/main/resources/zh_HK/element/: plurals.json  string.json
systemres/main/resources/zh_TW/element/: plurals.json  string.json
systemres/main/resources/zz_ZX/element/: plurals.json  string.json
test/code/AppScope/: app.json5
test/code/AppScope/resources/base/element/: string.json
test/code/entry/src/main/: module.json5
test/code/entry/src/main/ets/pages/: Index.ets
test/code/entry/src/main/resources/base/element/: string.json
test/code/entry/src/main/resources/zh_CN/element/: string.json
test/tool/: test_font.hap
