# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  system_resources_support_ext = false
}

certificate_profile_path =
    "//vendor/tools/hap_sign_conf/global/system_resources/SystemResources.p7b"

systemres_ext_path = "//vendor/${product_company}/base/global/system_resources"

fonts_list = [
  {
    font_name = "HarmonyOS_Sans_Black"
    font_path = "fonts/HarmonyOS_Sans_Black.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Black_Italic"
    font_path = "fonts/HarmonyOS_Sans_Black_Italic.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Bold"
    font_path = "fonts/HarmonyOS_Sans_Bold.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Bold_Italic"
    font_path = "fonts/HarmonyOS_Sans_Bold_Italic.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Condensed_Black"
    font_path = "fonts/HarmonyOS_Sans_Condensed_Black.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Condensed_Black_Italic"
    font_path = "fonts/HarmonyOS_Sans_Condensed_Black_Italic.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Condensed_Bold"
    font_path = "fonts/HarmonyOS_Sans_Condensed_Bold.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Condensed_Bold_Italic"
    font_path = "fonts/HarmonyOS_Sans_Condensed_Bold_Italic.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Condensed_Light"
    font_path = "fonts/HarmonyOS_Sans_Condensed_Light.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Condensed_Light_Italic"
    font_path = "fonts/HarmonyOS_Sans_Condensed_Light_Italic.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Condensed_Medium"
    font_path = "fonts/HarmonyOS_Sans_Condensed_Medium.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Condensed_Medium_Italic"
    font_path = "fonts/HarmonyOS_Sans_Condensed_Medium_Italic.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Condensed_Regular"
    font_path = "fonts/HarmonyOS_Sans_Condensed_Regular.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Condensed_Regular_Italic"
    font_path = "fonts/HarmonyOS_Sans_Condensed_Regular_Italic.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Condensed_Thin"
    font_path = "fonts/HarmonyOS_Sans_Condensed_Thin.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Condensed_Thin_Italic"
    font_path = "fonts/HarmonyOS_Sans_Condensed_Thin_Italic.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Digit"
    font_path = "fonts/HarmonyOS_Sans_Digit.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Digit_Medium"
    font_path = "fonts/HarmonyOS_Sans_Digit_Medium.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Light"
    font_path = "fonts/HarmonyOS_Sans_Light.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Light_Italic"
    font_path = "fonts/HarmonyOS_Sans_Light_Italic.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Medium"
    font_path = "fonts/HarmonyOS_Sans_Medium.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Medium_Italic"
    font_path = "fonts/HarmonyOS_Sans_Medium_Italic.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Naskh_Arabic_UI_Black"
    font_path = "fonts/HarmonyOS_Sans_Naskh_Arabic_UI_Black.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Naskh_Arabic_Black"
    font_path = "fonts/HarmonyOS_Sans_Naskh_Arabic_Black.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Naskh_Arabic_UI_Bold"
    font_path = "fonts/HarmonyOS_Sans_Naskh_Arabic_UI_Bold.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Naskh_Arabic_Bold"
    font_path = "fonts/HarmonyOS_Sans_Naskh_Arabic_Bold.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Naskh_Arabic_UI_Light"
    font_path = "fonts/HarmonyOS_Sans_Naskh_Arabic_UI_Light.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Naskh_Arabic_Light"
    font_path = "fonts/HarmonyOS_Sans_Naskh_Arabic_Light.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Naskh_Arabic_UI_Medium"
    font_path = "fonts/HarmonyOS_Sans_Naskh_Arabic_UI_Medium.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Naskh_Arabic_Medium"
    font_path = "fonts/HarmonyOS_Sans_Naskh_Arabic_Medium.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Naskh_Arabic_UI_Regular"
    font_path = "fonts/HarmonyOS_Sans_Naskh_Arabic_UI_Regular.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Naskh_Arabic_Regular"
    font_path = "fonts/HarmonyOS_Sans_Naskh_Arabic_Regular.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Naskh_Arabic_UI_Thin"
    font_path = "fonts/HarmonyOS_Sans_Naskh_Arabic_UI_Thin.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Naskh_Arabic_Thin"
    font_path = "fonts/HarmonyOS_Sans_Naskh_Arabic_Thin.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Regular"
    font_path = "fonts/HarmonyOS_Sans_Regular.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Regular_Italic"
    font_path = "fonts/HarmonyOS_Sans_Regular_Italic.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_SC_Black"
    font_path = "fonts/HarmonyOS_Sans_SC_Black.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_SC_Bold"
    font_path = "fonts/HarmonyOS_Sans_SC_Bold.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_SC_Light"
    font_path = "fonts/HarmonyOS_Sans_SC_Light.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_SC_Medium"
    font_path = "fonts/HarmonyOS_Sans_SC_Medium.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_SC_Regular"
    font_path = "fonts/HarmonyOS_Sans_SC_Regular.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_SC_Thin"
    font_path = "fonts/HarmonyOS_Sans_SC_Thin.ttf"
  },
  {
    font_name = "HarmonyOS_SansSC_Semibold"
    font_path = "fonts/HarmonyOS_SansSC_Semibold.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_TC_Black"
    font_path = "fonts/HarmonyOS_Sans_TC_Black.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_TC_Bold"
    font_path = "fonts/HarmonyOS_Sans_TC_Bold.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_TC_Light"
    font_path = "fonts/HarmonyOS_Sans_TC_Light.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_TC_Medium"
    font_path = "fonts/HarmonyOS_Sans_TC_Medium.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_TC_Regular"
    font_path = "fonts/HarmonyOS_Sans_TC_Regular.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_TC_Thin"
    font_path = "fonts/HarmonyOS_Sans_TC_Thin.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Thin"
    font_path = "fonts/HarmonyOS_Sans_Thin.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Thin_Italic"
    font_path = "fonts/HarmonyOS_Sans_Thin_Italic.ttf"
  },
  {
    font_name = "NotoSans_JP_Regular"
    font_path = "fonts/NotoSans_JP_Regular.otf"
  },
  {
    font_name = "NotoSans_JP_Bold"
    font_path = "fonts/NotoSans_JP_Bold.otf"
  },
  {
    font_name = "NotoSans_JP_Light"
    font_path = "fonts/NotoSans_JP_Light.otf"
  },
  {
    font_name = "NotoSans_KR_Regular"
    font_path = "fonts/NotoSans_KR_Regular.otf"
  },
  {
    font_name = "NotoSans_KR_Bold"
    font_path = "fonts/NotoSans_KR_Bold.otf"
  },
  {
    font_name = "NotoSans_KR_Light"
    font_path = "fonts/NotoSans_KR_Light.otf"
  },
  {
    font_name = "HMOSColorEmojiCompat"
    font_path = "fonts/HMOSColorEmojiCompat.ttf"
  },
  {
    font_name = "HMOSColorEmojiFlags"
    font_path = "fonts/HMOSColorEmojiFlags.ttf"
  },
  {
    font_name = "HMSymbol-Black"
    font_path = "fonts/HMSymbol-Black.ttf"
  },
  {
    font_name = "HMSymbol-Bold"
    font_path = "fonts/HMSymbol-Bold.ttf"
  },
  {
    font_name = "HMSymbol-ExtraLight"
    font_path = "fonts/HMSymbol-ExtraLight.ttf"
  },
  {
    font_name = "HMSymbol-ExtraBold"
    font_path = "fonts/HMSymbol-ExtraBold.ttf"
  },
  {
    font_name = "HMSymbol-Light"
    font_path = "fonts/HMSymbol-Light.ttf"
  },
  {
    font_name = "HMSymbol-Medium"
    font_path = "fonts/HMSymbol-Medium.ttf"
  },
  {
    font_name = "HMSymbol-Regular"
    font_path = "fonts/HMSymbol-Regular.ttf"
  },
  {
    font_name = "HMSymbol-SemiBold"
    font_path = "fonts/HMSymbol-SemiBold.ttf"
  },
  {
    font_name = "HMSymbol-Thin"
    font_path = "fonts/HMSymbol-Thin.ttf"
  },
  {
    font_name = "hm_symbol_config"
    font_path = "fonts/hm_symbol_config.json"
  },
  {
    font_name = "hm_symbol_config_next"
    font_path = "fonts/hm_symbol_config_next.json"
  },
]
