# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  system_resources_support_ext = false
}

certificate_profile_path =
    "//vendor/tools/hap_sign_conf/global/system_resources/SystemResources.p7b"

systemres_ext_path = "//vendor/${product_company}/base/global/system_resources"

fonts_list = [
  {
    font_name = "HarmonyOS_Sans"
    font_path = "fonts/HarmonyOS_Sans.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Italic"
    font_path = "fonts/HarmonyOS_Sans_Italic.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Condensed"
    font_path = "fonts/HarmonyOS_Sans_Condensed.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Condensed_Italic"
    font_path = "fonts/HarmonyOS_Sans_Condensed_Italic.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Naskh_Arabic"
    font_path = "fonts/HarmonyOS_Sans_Naskh_Arabic.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Naskh_Arabic_UI"
    font_path = "fonts/HarmonyOS_Sans_Naskh_Arabic_UI.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_SC"
    font_path = "fonts/HarmonyOS_Sans_SC.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_TC"
    font_path = "fonts/HarmonyOS_Sans_TC.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Digit"
    font_path = "fonts/HarmonyOS_Sans_Digit.ttf"
  },
  {
    font_name = "HarmonyOS_Sans_Digit_Medium"
    font_path = "fonts/HarmonyOS_Sans_Digit_Medium.ttf"
  },
  {
    font_name = "HMOSColorEmojiCompat"
    font_path = "fonts/HMOSColorEmojiCompat.ttf"
  },
  {
    font_name = "HMOSColorEmojiFlags"
    font_path = "fonts/HMOSColorEmojiFlags.ttf"
  },
  {
    font_name = "HMSymbolVF"
    font_path = "fonts/HMSymbolVF.ttf"
  },
  {
    font_name = "hm_symbol_config"
    font_path = "fonts/hm_symbol_config.json"
  },
  {
    font_name = "hm_symbol_config_next"
    font_path = "fonts/hm_symbol_config_next.json"
  },
]
